@@ -29,8 +29,8 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
 
-[assembly: AssemblyVersion("3.1.0.1")]
-[assembly: AssemblyFileVersion("3.1.0.1")]
+[assembly: AssemblyVersion("3.1.0.2")]
+[assembly: AssemblyFileVersion("3.1.0.2")]
 
 
 
